Fix linter warnings